5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4500/executions/1715_3061.log
== TEST (2019-05-02 16:24:37) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: ")

if (quat < 0):
	dragao = "Entrada invalida"
elif(var == terrestre)
	dragao = "DROGON"
elif(var == aereo)
	dragao = "Rhaegal"
elif(var == maritimo)
	dragao = "Viserion"
	
-- ERROR:
File "XXXX", line 6
    elif(var == terrestre)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:24) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: ")

if (quat < 0):
	tipo = "Entrada invalida"
elif(var == terrestre)
	tipo = "DROGON"
elif(var == aereo)
	tipo = "Rhaegal"
elif(var == maritimo)
	tipo = "Viserion"
print (tipo)
	
-- ERROR:
File "XXXX", line 6
    elif(var == terrestre)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:28) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: ")

if (quat < 0):
	tipo = "Entrada invalida"
elif(var == terrestre)
	tipo = "DROGON"
elif(var == aereo)
	tipo = "Rhaegal"
elif(var == maritimo)
	tipo = "Viserion"
print (tipo)
	
-- ERROR:
File "XXXX", line 6
    elif(var == terrestre)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:35:02) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: ")

if (quat < 0):
	tipo = "Entrada invalida"
elif(var == terrestre)
	tipo = "DROGON"
	print(150 // quat)
elif(var == aereo)
	tipo = "Rhaegal"
	print (30 // quat)
elif(var == maritimo)
	tipo = "Viserion"
	print(40 // quat)
print (tipo)
	
-- ERROR:
File "XXXX", line 6
    elif(var == terrestre)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:18) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: ")

if (quat < 0):
	tipo = "Entrada invalida"
elif(var == terrestre)
	tipo = "DROGON"
	ataque(150 // quat)
elif(var == aereo)
	tipo = "Rhaegal"
	ataque (30 // quat)
elif(var == maritimo)
	tipo = "Viserion"
	ataque(40 // quat)
print (tipo)
print(ataque)
	
-- ERROR:
File "XXXX", line 6
    elif(var == terrestre)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:24) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: ")

if (quat < 0):
	tipo = "Entrada invalida"
elif(var == terrestre)
	tipo = "DROGON"
	ataque(150 // quat)
elif(var == aereo)
	tipo = "Rhaegal"
	ataque (30 // quat)
elif(var == maritimo)
	tipo = "Viserion"
	ataque(40 // quat)
print (tipo)
print(ataque)
	
-- ERROR:
File "XXXX", line 6
    elif(var == terrestre)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:19) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: ")

if (quat < 0):
	tipo = "Entrada invalida"
elif(var == terrestre)
	tipo = "DROGON"
	ataque(150 // quat)
elif(var == aereo)
	tipo = "Rhaegal"
	ataque (30 // quat)
elif(var == maritimo)
	tipo = "Viserion"
	ataque(40 // quat)
print (tipo)
print(ataque)
	
-- ERROR:
File "XXXX", line 6
    elif(var == terrestre)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:48) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: ")

if (quat < 0):
	tipo = "Entrada invalida"
elif(var == TERRESTRE)
	tipo = "DROGON"
	ataque(150 / quat)
elif(var == AEREO)
	tipo = "Rhaegal"
	ataque (30 / quat)
elif(var == MARITIMO)
	tipo = "Viserion"
	ataque(40 / quat)
print (tipo)
print(ataque)
	
-- ERROR:
File "XXXX", line 6
    elif(var == TERRESTRE)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:42:36) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: ")

if (quat < 0):
	tipo = "Entrada invalida"
if (tipo = "DROGON","RHAEGAL","VISERION")
	tipo = "Valido"
elif(var == TERRESTRE)
	tipo = "DROGON"
	ataque(150 / quat)
elif(var == AEREO)
	tipo = "Rhaegal"
	ataque (30 / quat)
elif(var == MARITIMO)
	tipo = "Viserion"
	ataque(40 / quat)
print (tipo)
print(ataque)
	
-- ERROR:
File "XXXX", line 6
    if (tipo = "DROGON","RHAEGAL","VISERION")
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:42:55) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: ")

if (quat < 0):
	tipo = "Entrada invalida"
	
if (tipo = "DROGON","RHAEGAL","VISERION")
	tipo = "Valido"
elif(var == TERRESTRE)
	tipo = "DROGON"
	ataque(150 / quat)
elif(var == AEREO)
	tipo = "Rhaegal"
	ataque (30 / quat)
elif(var == MARITIMO)
	tipo = "Viserion"
	ataque(40 / quat)
print (tipo)
print(ataque)
	
-- ERROR:
File "XXXX", line 7
    if (tipo = "DROGON","RHAEGAL","VISERION")
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:28) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: " + 1)

if (quat < 0):
	tipo = "Entrada invalida"
	
if (tipo = "DROGON","RHAEGAL","VISERION")
	tipo = "Valido"
elif(var == TERRESTRE)
	tipo = "DROGON"
	ataque(150 / quat)
elif(var == AEREO)
	tipo = "Rhaegal"
	ataque (30 / quat)
elif(var == MARITIMO)
	tipo = "Viserion"
	ataque(40 / quat)
print (tipo)
print(ataque)
	
-- ERROR:
File "XXXX", line 7
    if (tipo = "DROGON","RHAEGAL","VISERION")
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:45) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: " + 1)

if (quat < 0):
	tipo = "Entrada invalida"
	
if (tipo = "DROGON","RHAEGAL","VISERION")
	dragao = "Valido"
elif(var == TERRESTRE)
	tipo = "DROGON"
	ataque(150 / quat)
elif(var == AEREO)
	tipo = "Rhaegal"
	ataque (30 / quat)
elif(var == MARITIMO)
	tipo = "Viserion"
	ataque(40 / quat)
print (tipo)
print(ataque)
	
-- ERROR:
File "XXXX", line 7
    if (tipo = "DROGON","RHAEGAL","VISERION")
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:03) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: " + 1)

if (quat < 0):
	tipo = "Entrada invalida"
	
if (tipo == "DROGON","RHAEGAL","VISERION")
	dragao = "Valido"
elif(var == TERRESTRE)
	tipo = "DROGON"
	ataque(150 / quat)
elif(var == AEREO)
	tipo = "Rhaegal"
	ataque (30 / quat)
elif(var == MARITIMO)
	tipo = "Viserion"
	ataque(40 / quat)
print (tipo)
print(ataque)
	
-- ERROR:
File "XXXX", line 7
    if (tipo == "DROGON","RHAEGAL","VISERION")
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:24) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: " + 1)

if (quat < 0):
	tipo = "Entrada invalida"
	
if (tipo == "DROGON","RHAEGAL","VISERION"):
	dragao = "Valido"
elif(var == TERRESTRE):
	tipo = "DROGON"
	ataque(150 / quat)
elif(var == AEREO):
	tipo = "Rhaegal"
	ataque (30 / quat)
elif(var == MARITIMO):
	tipo = "Viserion"
	ataque(40 / quat)
print (tipo)
print(ataque)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quat = int("Insira a quantidade a ser destruida: " + 1)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:56) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: " + 1)

if (quat < 0):
	tipo = "Entrada invalida"
elif(var == TERRESTRE):
	tipo = "DROGON"
	ataque(150 / quat)
elif(var == AEREO):
	tipo = "Rhaegal"
	ataque (30 / quat)
elif(var == MARITIMO):
	tipo = "Viserion"
	ataque(40 / quat)
print (tipo)
print(ataque)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quat = int("Insira a quantidade a ser destruida: " + 1)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:46:29) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: ")

if (quat < 0):
	tipo = "Entrada invalida"
elif(var == TERRESTRE):
	tipo = "DROGON"
	ataque(150 / quat)
elif(var == AEREO):
	tipo = "Rhaegal"
	ataque (30 / quat)
elif(var == MARITIMO):
	tipo = "Viserion"
	ataque(40 / quat)
print (tipo)
print(ataque)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quat = int("Insira a quantidade a ser destruida: ")
ValueError: invalid literal for int() with base 10: 'Insira a quantidade a ser destruida: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:47:08) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: ")

if (quat < 0):
	tipo = "Entrada invalida"
elif(var == TERRESTRE):
	tipo = "DROGON"
	ataque(150 / quat)
elif(var == AEREO):
	tipo = "Rhaegal"
	ataque (30 / quat)
elif(var == MARITIMO):
	tipo = "Viserion"
	ataque(40 / quat)
print (tipo)
print(ataque)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quat = int("Insira a quantidade a ser destruida: ")
ValueError: invalid literal for int() with base 10: 'Insira a quantidade a ser destruida: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:47:26) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: ")

if (quat < 0):
	tipo = "Entrada invalida"
elif(var == TERRESTRE):
	tipo = "DROGON"
	ataque(150 / quat)
elif(var == AEREO):
	tipo = "Rhaegal"
	ataque (30 / quat)
elif(var == MARITIMO):
	tipo = "Viserion"
	ataque(40 / quat)
print (tipo)
print(ataque)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quat = int("Insira a quantidade a ser destruida: ")
ValueError: invalid literal for int() with base 10: 'Insira a quantidade a ser destruida: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:49:58) 
-- CODE:
var = input("Insira o tipo de ataque: ")
quat = int("Insira a quantidade a ser destruida: ")

if (quat < 0):
	tipo = "Entrada invalida"
elif(var == TERRESTRE):
	tipo = "DROGON"
	ataque(150 / quat)
elif(var == AEREO):
	tipo = "Rhaegal"
	ataque (30 / quat)
elif(var == MARITIMO):
	tipo = "Viserion"
	ataque(40 / quat)
print (tipo)
print(ataque)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quat = int("Insira a quantidade a ser destruida: ")
ValueError: invalid literal for int() with base 10: 'Insira a quantidade a ser destruida: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
